# logprob-greedy-selector

./: .gitignore  README.en.md  README.md  pyproject.toml  requirements.txt
configs/: experiment.yaml
docs/: 0.8B总结.md  target.md  主实验报告.md  代码架构总览.md  数据构造.md
scripts/: 00_fetch_longbench_raw.py  01_build_teacher_paths.py  02_build_delta_dataset.py  03_train_delta_model.py  04_run_greedy_selector.py
selector/: __init__.py
selector/data/: __init__.py  build_delta_dataset.py  context.py  greedy_teacher.py  io.py  schema.py
selector/model/: __init__.py  dataset.py  delta_model.py
selector/scoring/: __init__.py  base.py  delta_model_predictor.py  hf_logprob_scorer.py  openai_logprob_scorer.py
selector/select/: __init__.py  greedy_selector.py
