[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logprob-greedy-selector"
version = "0.1.0"
description = "Reproduction scaffold for logprob-delta greedy chunk selection with a small trainable selector."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Contributors" }
]
dependencies = [
  "torch>=2.0.0",
  "transformers>=4.35.0",
  "datasets>=2.18.0",
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0"
]

[tool.setuptools.packages.find]
include = ["selector*"]

[tool.ruff]
line-length = 100
target-version = "py310"

